make changes in the ui; see descr.
Running the prgram on Java 11 (probably 9+) with a high dpi screen causes the problem that the cursor cannot be placed in the text correctly. Therefore, the  ui scaling is disabled.